# ndviewer_light

./: .coverage  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  __init__.py  create_shortcut.py  environment.yml  ndviewer_light.py  pyproject.toml  simulate_live_acquisition.py  simulate_push_acquisition.py  simulate_zarr_acquisition.py
.claude/agents/: code-simplifier.md  unit-test-writer.md
.github/workflows/: ci.yml
docs/: DESIGN.md  zarr_viewer_architecture.md
ndviewer_light/: __init__.py  __main__.py  core.py
tests/: README.md  test_3d_visualization.py  test_channel_names.py  test_downsampling_wrapper.py  test_get_fov_list.py  test_has_fov_dimension.py  test_inplace_update.py  test_live_refresh.py  test_memory_leak_reproduction.py  test_metadata_extraction.py  test_push_api.py  test_refresh.py  test_zarr_push_api.py  test_zarr_v3.py
